--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,12 @@ body {
     text-wrap: balance;
   }
 }
+.tree-container {
+  width: 80%;
+  height: 1500px; /* Chiều cao khung */
+  border: 2px solid #ccc; /* Màu viền khung */
+  border-radius: 8px; /* Bo góc khung */
+  overflow: auto; /* Tạo thanh cuộn nếu nội dung vượt quá kích thước khung */
+  padding: 20px; /* Khoảng cách giữa nội dung và viền khung */
+  background-color: 'black'; /* Màu nền khung */
+}
